# tdxapi

./: .gitignore  README.md  notes.txt  pyproject.toml  requirements.txt  tdxapi.py  tdxapi_logging.conf
src/tdxapi/: __init__.py  __init__.pyi  exceptions.py  exceptions.pyi  tdxapi.py  tdxapi.pyi  tdxapi_exceptions.py
