[build-system]
requires = ["setuptools", "setuptools-scm", "setuptools-git-versioning<2"]
build-backend = "setuptools.build_meta"

[project]
name = "tdxapi"
authors = [
    { name="Owain Kert", email="owaink@umich.edu" },
    { name="Chris Xiao", email="chrisx@umich.edu" }
]
description = "Python wrapper for the TeamDynamix Web Api"
readme = "README.md"
requires-python = ">=3.9"
classifiers = []
dynamic = ["dependencies", "version"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
"Homepage" = "https://github.com/owaink/tdxapi"

[tool.setuptools-git-versioning]
enabled = true
version_file = "VERSION"
count_commits_from_version_file = true
dev_template = "{tag}.{ccount}+{sha}"
dirty_template = "{tag}.{ccount}+{sha}"

[tool.black]
line-length = 79
